--- a/CounterSample.ClientSide/Pages/Counter.razor
+++ b/CounterSample.ClientSide/Pages/Counter.razor
@@ -7,10 +7,14 @@
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
 
 @functions {
-    int currentCount = 0;
 
-    void IncrementCount()
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
+    private int currentCount = 0;
+
+    private void IncrementCount()
     {
-        currentCount += 2;
+        currentCount += IncrementAmount;
     }
 }
