--- a/BasicSample.ClientSide/_Imports.razor
+++ b/BasicSample.ClientSide/_Imports.razor
@@ -3,5 +3,5 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-@using BasicSample.ClientSide
-@using BasicSample.ClientSide.Shared
+@using Sample.ClientSide
+@using Sample.ClientSide.Shared
