--- a/Sample.ClientSide/_Imports.razor
+++ b/Sample.ClientSide/_Imports.razor
@@ -1,7 +1,10 @@
 @using System.Net.Http
+@using System.Collections.Immutable
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using Sample.ClientSide
+@using Sample.ClientSide.Api
 @using Sample.ClientSide.Shared
+@using Sample.Models
