Removed immutables from client

--- a/Sample.ClientSide/Pages/FetchData.razor
+++ b/Sample.ClientSide/Pages/FetchData.razor
@@ -36,7 +36,7 @@ else
 
 @functions {
 
-    WeatherInfo[] forecasts;
+    IEnumerable<WeatherInfo> forecasts;
 
     protected override async Task OnInitAsync()
     {
