--- a/Sample.ServerSide/_Imports.razor
+++ b/Sample.ServerSide/_Imports.razor
@@ -1,6 +1,8 @@
 @using System.Net.Http
+@using System.Collections.Immutable
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using Sample.ServerSide.Shared
+@using Sample.Models
