--- a/Sample.ServerSide/Pages/Todo.razor
+++ b/Sample.ServerSide/Pages/Todo.razor
@@ -1,3 +1,16 @@
 ﻿@page "/todo"
 
 <h1>Todo</h1>
+
+<ul>
+    @foreach (var todo in todos)
+    {
+        <li>@todo.Title</li>
+    }
+</ul>
+
+@functions {
+
+    private List<TodoItem> todos = new List<TodoItem>();
+
+}
