--- a/Sample.ServerSide/Pages/Todo.razor
+++ b/Sample.ServerSide/Pages/Todo.razor
@@ -9,6 +9,9 @@
     }
 </ul>
 
+<input placeholder="Something todo" />
+<button>Add Todo</button>
+
 @functions {
 
     private List<TodoItem> todos = new List<TodoItem>();
