--- a/Sample.ClientSide/Pages/Todo.razor
+++ b/Sample.ClientSide/Pages/Todo.razor
@@ -10,10 +10,14 @@
 </ul>
 
 <input placeholder="Something todo" />
-<button>Add Todo</button>
+<button onclick="@AddTodo">Add Todo</button>
 
 @functions {
 
     private List<TodoItem> todos = new List<TodoItem>();
+
+    private void AddTodo()
+    {
+    }
 
 }
