--- a/Sample.ClientSide/Pages/Todo.razor
+++ b/Sample.ClientSide/Pages/Todo.razor
@@ -19,6 +19,14 @@
 
     private void AddTodo()
     {
+        if (!string.IsNullOrWhiteSpace(newTodo))
+        {
+            todos.Add(new TodoItem
+            {
+                Title = newTodo
+            });
+            newTodo = null;
+        }
     }
 
 }
