--- a/Sample.ServerSide/Pages/Todo.razor
+++ b/Sample.ServerSide/Pages/Todo.razor
@@ -5,7 +5,10 @@
 <ul>
     @foreach (var todo in todos)
     {
-        <li>@todo.Title</li>
+        <li>
+            <input type="checkbox" Value="@todo.IsDone" />
+            <input bind="@todo.Title" />
+        </li>
     }
 </ul>
 
