--- a/Sample.ClientSide/Pages/Todo.razor
+++ b/Sample.ClientSide/Pages/Todo.razor
@@ -1,12 +1,12 @@
 ﻿@page "/todo"
 
-<h1>Todo</h1>
+<h1>Todo (@todos.Count(todo => !todo.IsDone))</h1>
 
 <ul>
     @foreach (var todo in todos)
     {
         <li>
-            <input type="checkbox" Value="@todo.IsDone" />
+            <input type="checkbox" bind="@todo.IsDone" />
             <input bind="@todo.Title" />
         </li>
     }
