--- a/Sample.ServerSide/_Imports.razor
+++ b/Sample.ServerSide/_Imports.razor
@@ -4,5 +4,6 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
+@using Sample.ServerSide.Services
 @using Sample.ServerSide.Shared
 @using Sample.Models
