--- a/Sample.ServerSide/Pages/Todo.razor
+++ b/Sample.ServerSide/Pages/Todo.razor
@@ -11,7 +11,7 @@
             <input type="checkbox" checked="@todo.IsDone" onchange="@(async e => await HandleTodoDoneAsync(todo, (bool)e.Value))" />
 
             <!-- Demonstrates standard two-way binding -->
-            <input bind="@todo.Title" />
+            <input value="@todo.Title" onchange="@(async e => await HandleTodoTitleChangeAsync(todo, (string)e.Value))" />
         </li>
     }
 </ul>
@@ -102,6 +102,13 @@
     private async Task HandleTodoDoneAsync(TodoItem item, bool isDone)
     {
         item.IsDone = isDone;
+
+        await TodoService.SetAsync(item);
+    }
+
+    private async Task HandleTodoTitleChangeAsync(TodoItem item, string title)
+    {
+        item.Title = title;
 
         await TodoService.SetAsync(item);
     }
