--- a/Sample.ClientSide/Pages/Todo.razor
+++ b/Sample.ClientSide/Pages/Todo.razor
@@ -10,7 +10,7 @@
             <div class="input-group-text">
                 <input type="checkbox" checked="@todo.IsDone" onchange="@(async e => await HandleTodoDoneAsync(todo, (bool)e.Value))" />
             </div>
-            <button class="btn btn-outline-secondary" type="button">
+            <button class="btn btn-outline-secondary" type="button" onclick="@(async e => await HandleDeleteTodoAsync(todo))">
                 <span class="oi oi-trash" aria-hidden="true"></span>
             </button>
         </div>
@@ -70,5 +70,12 @@
         item.Title = title;
 
         await ApiService.SetTodoAsync(item);
+    }
+
+    private async Task HandleDeleteTodoAsync(TodoItem item)
+    {
+        await ApiService.DeleteTodoAsync(item.Key);
+
+        todos.Remove(item);
     }
 }
