--- a/Sample.ClientSide/_Imports.razor
+++ b/Sample.ClientSide/_Imports.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using Sample.ClientSide
+@using Sample.ClientSide.Models
 @using Sample.ClientSide.Services
 @using Sample.ClientSide.Shared
 @using Sample.Models
