--- a/Sample.ServerSide/Pages/FetchData.razor
+++ b/Sample.ServerSide/Pages/FetchData.razor
@@ -1,5 +1,4 @@
 @page "/fetchdata"
-@using Sample.ServerSide.Services
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
@@ -37,7 +36,7 @@ else
 
 @functions {
 
-    ImmutableList<WeatherInfo> forecasts;
+    ImmutableArray<WeatherInfo> forecasts;
 
     protected override async Task OnInitAsync()
     {
