--- a/Sample.ServerSide/Pages/Todo.razor
+++ b/Sample.ServerSide/Pages/Todo.razor
@@ -10,7 +10,7 @@
             <div class="input-group-text">
                 <input type="checkbox" checked="@todo.IsDone" onchange="@(async e => await HandleTodoDoneAsync(todo, (bool)e.Value))" />
             </div>
-            <button class="btn btn-outline-secondary" type="button">
+            <button class="btn btn-outline-secondary" type="button" onclick="@(async e => await HandleDeleteTodoAsync(todo))">
                 <span class="oi oi-trash" aria-hidden="true"></span>
             </button>
         </div>
@@ -107,5 +107,15 @@
         var updated = item.WithTitle(title);
         lookup[item.Key].Value = updated;
         await TodoService.SetAsync(updated);
+    }
+
+    private async Task HandleDeleteTodoAsync(TodoItem item)
+    {
+        await TodoService.DeleteAsync(item.Key);
+        if (lookup.TryGetValue(item.Key, out var node))
+        {
+            todos.Remove(node);
+            lookup.Remove(item.Key);
+        }
     }
 }
